@@ -1,5 +1,12 @@
 2005-12-07  Murray Cumming <murrayc@murrayc.com>
 
+	* cairomm/context.cc:
+	* cairomm/context.h: Add typedef for Matrix, though we 
+	probably want to derive a class with a C++-like matrix 
+	API, with operator overloading.
+
+2005-12-07  Murray Cumming <murrayc@murrayc.com>
+
 	* cairomm/exception.cc:
 	* cairomm/exception.h: Rename to logic_error, because 
 	the cairo documentation says that most of them are 
